@@ -3,15 +3,17 @@ package com.cs.tu.caruserapp.Model;
 public class User {
 
     private String id;
-    private String username;
-    private String imageURL;
-    private String search_name;
+    private String firstname;
+    private String lastname;
+    private String phone_number;
+    private String verify_status;
 
-    public User(String id, String username, String imageURL, String search_name) {
+    public User(String id, String firstname, String lastname, String phone_number, String verify_status) {
         this.id = id;
-        this.username = username;
-        this.imageURL = imageURL;
-        this.search_name = search_name;
+        this.firstname = firstname;
+        this.lastname = lastname;
+        this.phone_number = phone_number;
+        this.verify_status = verify_status;
     }
 
     public User(){
@@ -26,24 +28,35 @@ public class User {
         this.id = id;
     }
 
-    public String getUsername() {
-        return username;
+    public String getFirstname() {
+        return firstname;
     }
 
-    public void setUsername(String username) {
-        this.username = username;
+    public void setFirstname(String firstname) {
+        this.firstname = firstname;
     }
 
-    public String getImageURL() {
-        return imageURL;
+    public String getLastname() {
+        return lastname;
     }
 
-    public void setImageURL(String imageURL) {
-        this.imageURL = imageURL;
+    public void setLastname(String lastname) {
+        this.lastname = lastname;
     }
 
-    public String getSearch_name() { return search_name; }
+    public String getPhone_number() {
+        return phone_number;
+    }
 
-    public void setSearch_name(String search_name) { this.search_name = search_name; }
+    public void setPhone_number(String phone_number) {
+        this.phone_number = phone_number;
+    }
 
+    public String getVerify_status() {
+        return verify_status;
+    }
+
+    public void setVerify_status(String verify_status) {
+        this.verify_status = verify_status;
+    }
 }
