@@ -19,35 +19,63 @@
         android:layout_below="@+id/toolbar"
         android:padding="16dp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/layoutUsername"
-            android:hint="Display name"
-            android:textColorHint="@color/white"
-            app:errorEnabled="false"
-            app:counterEnabled="true"
-            app:counterTextAppearance="@style/CounterText"
-            app:counterMaxLength="20"
+            android:orientation="vertical"
+            android:id="@+id/layoutName"
             android:gravity="center"
-            android:layout_marginBottom="20dp"
-            app:helperTextEnabled="true"
-            app:helperText="Others people will see your display name"
-            app:helperTextTextAppearance="@style/HelperText">
+            android:layout_marginBottom="10dp">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/edt_username"
-                android:background="@color/edittext_bg"
-                android:padding="10dp"
-                android:maxLength="20"
-                android:drawableLeft="@drawable/ic_user"
-                android:drawablePadding="10dp"
-                android:ems="14"
-                android:textColor="@color/white"/>
+                android:id="@+id/layoutFirstname"
+                android:hint="First name"
+                android:textColorHint="@color/gray"
+                android:layout_marginBottom="10dp"
+                app:helperTextEnabled="true"
+                app:helperText="Your first name will be private."
+                app:helperTextTextAppearance="@style/HelperText">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edt_firstname"
+                    android:background="@color/edittext_bg"
+                    android:padding="10dp"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:maxLength="30"
+                    android:ems="12"
+                    android:textColor="@color/white"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/layoutLastname"
+                android:hint="Last name"
+                android:textColorHint="@color/gray"
+                app:helperTextEnabled="true"
+                app:helperText="Your last name will be private."
+                app:helperTextTextAppearance="@style/HelperText">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/edt_lastname"
+                    android:background="@color/edittext_bg"
+                    android:padding="10dp"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:maxLength="30"
+                    android:ems="12"
+                    android:textColor="@color/white"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,7 +99,6 @@
             android:id="@+id/layoutPhone"
             android:hint="Phone number"
             android:textColorHint="@color/white"
-            app:errorEnabled="false"
             android:layout_marginTop="10dp">
 
             <com.google.android.material.textfield.TextInputEditText
