@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#17043A</color>
     <color name="colorAccent">#03A9F4</color>
     <color name="white">#fff</color>
+    <color name="gray">#80FFFFFF</color>
     <color name="black">#000000</color>
     <color name="blue">#034FF4</color>
     <color name="red">#CF2828</color>
